# fastapi-logger

./: .editorconfig  .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  mkdocs.yml  pyproject.toml
docs/: contributing.md  index.md  log_in_console.md  log_in_db.md  log_in_file.md  middleware.md  release-notes.md  sentry.md  syslog.md
docs_src/: example_1.py  example_2.py  example_3.py  example_4.py  example_5.py  example_6.py  example_7.py  example_8.py
fastapi_structlog/: __init__.py  base.py  custom_processors.py  exceptions.py  factory.py  log.py  settings.py  types.py  types_.py  utils.py
fastapi_structlog/db_handler/: __init__.py  handler.py  model.py
fastapi_structlog/middleware/: __init__.py  access_log.py  context_scope.py  current_scope.py  structlog.py  utils.py
fastapi_structlog/sentry/: __init__.py  initialization.py  settings.py
