[project]
name = "fastapi-structlog"
version = "0.7.1"
description = "Structured logs and middleware for fastapi with sentry integration"
authors = [{ name = "Vladimir Voronov", email = "voronov.volodya2013@yandex.ru" }]
requires-python = ">=3.9,<4.0.0"
readme = "README.md"
license = { text = "MIT" }
keywords = [
    "fastapi",
    "structlog",
    "logging",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "License :: OSI Approved :: MIT License",
    "Framework :: FastAPI",
    "Topic :: Internet",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development",
    "Topic :: System :: Logging",
]
dependencies = [
    "pydantic (>=2.12.5,<3.0.0)",
    "structlog (>=25.1.0,<26.0.0)",
    "orjson (>=3.11.5,<4.0.0)",
    "structlog-sentry (>=2.2.1,<3.0.0)",
    "rich (>=13.9.4,<14.0.0)",
    "pydantic-settings (>=2.7.1,<3.0.0)",
    "asgi-correlation-id (>=4.3.4,<5.0.0)",
    "sentry-sdk (>=2.21.0,<3.0.0)",
    "sqlmodel (>=0.0.31,<0.1.0)",
]

[project.urls]
homepage = "https://github.com/redb0/fastapi-logger"
repository = "https://github.com/redb0/fastapi-logger"

[tool.uv]
package = true
default-groups = [
    "linter",
    "examples",
    "dev",
    "docs",
]

[dependency-groups]
linter = ["ruff>=0.9.9,<1.0.0"]
examples = [
    "fastapi>=0.111.1,<0.112.0",
    "sqlalchemy>=2.0.31,<3.0.0",
    "asyncpg>=0.31.0,<0.32.0",
    "starsessions>=2.1.3,<3.0.0",
    "httptools>=0.6.4,<1.0.0",
    "watchfiles>=0.24.0,<2.0.0",
    "uvloop>=0.20.0,<1.0.0",
]
dev = [
    "mypy>=1.10.1,<2.0.0",
    "commitizen>=3.27.0,<4.0.0",
]
docs = [
    "mkdocs>=1.6.1,<2.0.0",
    "mkdocs-material>=9.6.7,<10.0.0",
    "mdx-include>=1.4.2,<2.0.0",
    "pygments>=2.19.1,<3.0.0",
    "pymdown-extensions>=10.14.3,<11.0.0",
]

[tool.hatch.build.targets.sdist]
include = ["fastapi_structlog"]

[tool.hatch.build.targets.wheel]
include = ["fastapi_structlog"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "pep440"
version_provider = "pep621"
update_changelog_on_bump = true
major_version_zero = true
version_files = [
    "fastapi_structlog/__init__.py",
]


[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

# https://docs.astral.sh/ruff/rules/
select = ["ALL"]
ignore = [
    "D104",
    "D107",
]
line-length = 100
# target-version = "py39"


[tool.ruff.lint.pyupgrade]
# Preserve types, even if a file imports `from __future__ import annotations`.
keep-runtime-typing = true

[tool.ruff.lint.per-file-ignores]
"docs_src/*" = ["D100", "D101", "D103", "T201", "S104", "INP001", "ERA001", "G004"]


[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"
inline-quotes = "single"


[tool.ruff.lint.pylint]
max-args = 5
max-positional-args = 3


[tool.pylint]
disable = "all"
bad-names = "foo,bar,baz,toto,tutu,tata"
good-names = "x,y,i,_,main,j,k,ex,Run"
enable = ["disallowed-name", "redefined-outer-name"]

[tool.ruff.lint.isort]
section-order = [
    "future",
    "standard-library",
    "fastapi",
    "third-party",
    "first-party",
    "local-folder",
]

[tool.ruff.lint.isort.sections]
"fastapi" = ["fastapi", "starlette"]


[tool.ruff.lint.pydocstyle]
convention = "google"


[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "single"
# Like Black, indent with spaces, rather than tabs.
indent-style = "space"
# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false
# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"


[tool.mypy]
# python_version = "3.9"
plugins = ["pydantic.mypy"]
show_traceback = true
strict = true
mypy_path = "fastapi_structlog/"
# Display the codes needed for # type: ignore[code] annotations.
show_error_codes = true
# Warn of unreachable or redundant code.
warn_unreachable = true
